unpackaged/objects/SFDC_Bug__c.object
<CustomObject>
    <description>Describes and tracks changes needed</description>
    <fields>
        <fullName>Classifcation__c</fullName>
        <label>CFTS Release</label>
        <picklist>
            <picklistValues>
                <fullName>S59</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S60</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S62</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>SFDC_Project__c</referenceTo>
        <relationshipName>R00N50000001HsLOEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Developer_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Developer Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SFDC_Estimated_Effort_Man_days__c</fullName>
        <label>Estimated Effort (Man-days)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Estimated_Fix_Date__c</fullName>
        <label>Estimated Fix Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_OS__c</fullName>
        <label>OS</label>
        <picklist>
            <picklistValues>
                <fullName>Windows 2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows XP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 98</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux 32 Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux 64 Bit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sun OS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>SFDC_Release__c</referenceTo>
        <relationshipName>R00N50000001HsLPEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will Not Fix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Target_Release__c</fullName>
        <label>Target Release</label>
        <precision>7</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bug</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Version__c</fullName>
        <label>Version</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Bug</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Title__c</columns>
        <columns>Project__c</columns>
        <columns>SFDC_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ResolvedBugs</fullName>
        <columns>NAME</columns>
        <columns>SFDC_Title__c</columns>
        <columns>Project__c</columns>
        <columns>SFDC_Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDC_Status__c</field>
            <operation>equals</operation>
            <value>Resolved</value>
        </filters>
        <label>Resolved Bugs</label>
    </listViews>
    <nameField>
        <displayFormat>BUG-{00000}</displayFormat>
        <label>Bug Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bugs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>